--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -1,23 +1,23 @@
 ---
 const links = [
   {
-    ref: '01',
+    ref: '',
     name: 'Home',
     href: '/',
   },
   {
-    ref: '02',
-    name: 'About',
+    ref: '',
+    name: 'Chi siamo',
     href: '/about',
   },
   {
-    ref: '03',
-    name: 'Pricing',
+    ref: '',
+    name: 'Servizi',
     href: '/pricing',
   },
   {
-    ref: '04',
-    name: 'Contact',
+    ref: '',
+    name: 'Contatti',
     href: '/contact',
   },
 ];
@@ -37,7 +37,7 @@ const links = [
         href="/"
         class="focus-visible:outline-primary-950 dark:group-focus-visible:outline-primary-200 rounded-md focus-visible:outline focus-visible:outline-2"
       >
-        <span class="sr-only">Stone</span>
+        <span class="sr-only">Kredibly</span>
         <img
           class="h-8 w-auto"
           width="65"
@@ -141,8 +141,7 @@ const links = [
         <p
           class="text-primary-950/70 dark:text-primary-200/70 max-w-sm text-xl italic leading-loose"
         >
-          <span class="font-medium">Stone</span> is a premium Astro theme specially designed for
-          Business, Marketing, SaaS and Startup websites.
+          <span class="font-medium">Kredibly</span> La Medizione Creditizia, cucita attorno alle tue esigenze
         </p>
       </div>
 
