--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -6,8 +6,8 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout
   description="Contact our team to learn more about how we can help you."
-  title="Contact · Stone"
+  title=" Kredibly--Contattaci"
 >
-  <ContactInfo />
   <ContactForm />
+  <ContactInfo />
 </Layout>
