--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -1,25 +1,25 @@
-<section class="py-48">
+<section class="py-48 bg-blue">
   <div class="mx-auto max-w-3xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
     <div class="flex flex-col gap-10">
       <div class="flex flex-col items-start gap-8 sm:gap-10">
-        <div class="flex max-w-2xl flex-col items-start gap-4 sm:gap-6">
-          <h1 class="text-4xl font-medium tracking-tight sm:text-5xl lg:text-6xl">
+        <div class="flex max-w-2xl flex-col items-start gap-10 sm:gap-6">
+          <h1 class="text-4xl text-white font-medium tracking-tight sm:text-5xl lg:text-6xl">
             La Mediazione Creditizia, cucita attorno alle tue esigenze
           </h1>
-          <p class="text-primary-950/70 dark:text-primary-200/70 text-lg sm:text-xl">
-            Anim aute id magna aliqua ad ad non deserunt sunt.
+          <p class="text-white dark:text-primary-200/70 text-lg sm:text-xl">
+            Una squadra di consulenti pronta a supportarti nella realizzazione dei tuoi sogni
           </p>
         </div>
         <a
           href="/contact"
-          class="bg-primary-950 dark:bg-primary-400 hover:bg-primary-700 dark:hover:bg-primary-300 focus-visible:outline-primary-600 dark:focus-visible:outline-primary-400 dark:text-primary-950 inline-flex items-center justify-center rounded-sm border border-transparent px-5 py-3 text-base font-medium text-white transition focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 mb-36"
+          class="bg-lightblue dark:bg-primary-400 hover:bg-primary-700 dark:hover:bg-primary-300 focus-visible:outline-primary-600 dark:focus-visible:outline-primary-400 dark:text-primary-950 inline-flex items-center justify-center rounded-sm border border-transparent px-5 py-3 text-base font-medium text-primary-600 transition focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 mb-36"
         >
           Prenota consulenza
         </a>
       </div>
     </div>
      <img
-        class="h-auto w-full"
+        class=" w-full"
         width="1920"
         height="1080"
         src="/assets/hero.webp"
@@ -27,3 +27,4 @@
      />
   </div>
 </section>
+
