--- a/src/components/about/Mission.astro
+++ b/src/components/about/Mission.astro
@@ -1,19 +1,19 @@
 ---
 const stats = [
   {
-    name: 'Years',
-    value: '9',
+    name: 'Anni di esperienza',
+    value: '10',
   },
   {
-    name: 'Experts',
+    name: 'Aree di intervento',
     value: '15',
   },
   {
-    name: 'Projects',
-    value: '122',
+    name: 'Clienti aiutati',
+    value: '1250',
   },
   {
-    name: 'Awards',
+    name: 'Consulenti',
     value: "'9'",
   },
 ];
@@ -23,7 +23,7 @@ const stats = [
   <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
     <div class="grid gap-16 lg:grid-cols-2 lg:gap-24">
       <img
-        class="mx-auto h-auto w-full max-w-xl rounded-3xl"
+        class="mx-auto h-auto w-full max-w-xl rounded-sm"
         width="576"
         height="864"
         src="/assets/about.webp"
@@ -32,7 +32,7 @@ const stats = [
       <div class="flex flex-col gap-10">
         <!-- Mission description -->
         <div class="space-y-8 sm:space-y-12">
-          <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Our mission</h2>
+          <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Il nostro DNA</h2>
           <div class="space-y-6">
             <p class="text-primary-950/70 dark:text-primary-200/70 text-base sm:text-lg">
               Sagittis scelerisque nulla cursus in enim consectetur quam. Dictum urna sed
