--- a/src/components/layout/Footer.astro
+++ b/src/components/layout/Footer.astro
@@ -26,7 +26,7 @@ const bottomLinks = [
     ],
   },
   {
-    header: 'Company',
+    header: 'Azienda',
     links: [
       {
         name: 'Home',
@@ -34,24 +34,24 @@ const bottomLinks = [
         isExternal: false,
       },
       {
-        name: 'About',
+        name: 'Chi Siamo',
         href: '/about',
         isExternal: false,
       },
       {
-        name: 'Pricing',
+        name: 'Servizi',
         href: '/pricing',
         isExternal: false,
       },
       {
-        name: 'Contact',
+        name: 'Contattaci',
         href: '/contact',
         isExternal: false,
       },
     ],
   },
   {
-    header: 'Legal',
+    header: 'Legale',
     links: [
       {
         name: 'Privacy',
@@ -59,13 +59,8 @@ const bottomLinks = [
         isExternal: false,
       },
       {
-        name: '404',
-        href: '/404',
-        isExternal: false,
-      },
-      {
-        name: 'Styleguide',
-        href: '/styleguide',
+        name: 'Trasparenza Bancaria',
+        href: 'https://www.credipass.it/trasparenza/',
         isExternal: false,
       },
     ],
@@ -89,13 +84,11 @@ const bottomLinks = [
           alt="Stone"
         />
         <p class="text-primary-950/70 dark:text-primary-200/70 text-base">
-          Stone is a premium Astro theme specially designed for Business, Marketing, SaaS and
-          Startup websites.
+          Kredibly è un gruppo di consulenti del credito del gruppo Credipass Srl. Società iscritta all’elenco dei mediatori creditizi presso OAM al nr. M12
         </p>
-        <p class="text-primary-950/70 dark:text-primary-200/70 text-sm">© 2023 Stone</p>
+        <p class="text-primary-950/70 dark:text-primary-200/70 text-sm">© 2025 Kredibly</p>
       </div>
 
-      <!-- Bottom links -->
       <div class="grid max-w-xl flex-1 grid-cols-1 gap-8 sm:grid-cols-3">
         {
           bottomLinks.map((group) => (
