--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,7 @@ const { description, title } = Astro.props;
     <ViewTransitions />
   </head>
   <body
-    class=" text-primary-950 dark:bg-primary-950 dark:text-primary-200 antialiased transition"
+    class=" text-primary-950 dark:bg-primary-950 dark:text-primary-200 antialiased transition m-5"
   >
     <Header />
     <main>
