--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,11 +10,11 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout
   description="La Medizione Creditizia, cucita attorno alle tue esigenze"
-  title="Kredibly -- Home"
+  title="Kredibly - Home"
 >
   <Hero />
-  <Services />
   <About />
+  <Services />
   <Testimonials />
   <Cta />
 </Layout>
