--- a/src/components/about/Team.astro
+++ b/src/components/about/Team.astro
@@ -1,19 +1,19 @@
 ---
 const team = [
   {
-    name: 'Floyd Lowe',
+    name: 'Carlo',
     image: '/assets/team-1.webp',
-    job: 'Senior Designer',
+    job: 'Specialista Mutui',
   },
   {
-    name: 'Emma Dorsey',
+    name: 'Luca',
     image: '/assets/team-2.webp',
-    job: 'Principal Designer',
+    job: 'Specialista corporate',
   },
   {
-    name: 'Emily Mitchell',
+    name: 'Riccardo',
     image: '/assets/team-3.webp',
-    job: 'Senior Developer',
+    job: 'Business developer',
   },
 ];
 ---
@@ -21,11 +21,11 @@ const team = [
 <section class="py-16 sm:py-20">
   <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
     <div class="sm:space-8 space-y-12">
-      <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Meet our team</h2>
+      <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Incontra i nostri consulenti</h2>
       <ul role="list" class="grid grid-cols-1 gap-8 sm:grid-cols-2 lg:grid-cols-3">
         {
           team.map((item) => (
-            <li class="border-primary-900/10 dark:border-primary-300/10 rounded-3xl border px-6 py-8">
+            <li class="border-primary-900/10 dark:border-primary-300/10 rounded-sm border px-6 py-8">
               <div class="space-y-6">
                 <img class="mx-auto h-auto w-16 rounded-full" src={item.image} alt={item.name} />
                 <div class="text-center">
