--- a/src/components/home/About.astro
+++ b/src/components/home/About.astro
@@ -1,9 +1,9 @@
-<section class="py-16 sm:py-20 bg-blue">
-  <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8 text-white">
-  <h2 class="text-3xl font-medium tracking-tight sm:text-4xl mb-24">About</h2>
+<section class="py-16 sm:py-20">
+  <div class="mx-auto max-w-2xl px-4 sm:px-6 lg:max-w-7xl lg:px-8 text-primary-900">
+  <h2 class="text-3xl font-medium tracking-tight sm:text-4xl">Chi Siamo</h2>
     <div class="grid gap-12 lg:grid-cols-3 lg:gap-8">
-      <div class="flex flex-col items-start gap-8 sm:gap-10 lg:col-span-2">
-        <p class="text-white dark:text-primary-200/70 text-base sm:text-lg">
+      <div class="flex flex-col items-start gap-18 sm:gap-10 lg:col-span-2">
+        <p class="text-primary-900 dark:text-primary-200/70 text-base sm:text-lg mt-18">
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores impedit perferendis
           suscipit eaque, iste dolor cupiditate blanditiis ratione. Lorem ipsum, dolor sit amet
           consectetur adipisicing elit. Maiores impedit perferendis suscipit eaque, iste dolor
@@ -14,7 +14,7 @@
         </p>
         <a
           href="/about"
-          class="bg-lightblue dark:bg-primary-400 hover:bg-primary-700 dark:hover:bg-primary-300 focus-visible:outline-primary-600 dark:focus-visible:outline-primary-400 dark:text-primary-950 inline-flex items-center justify-center rounded-sm border border-transparent px-5 py-3 text-base font-medium text-primary-600 transition focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 mt-24"
+          class="bg-blue text-white dark:bg-primary-400 hover:bg-primary-700 dark:hover:bg-primary-300 focus-visible:outline-primary-600 dark:focus-visible:outline-primary-400 dark:text-primary-950 inline-flex items-center justify-center rounded-sm border border-transparent px-5 py-3 text-base font-medium text-primary-600 transition focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 mt-18"
         >
           I nostri consulenti
         </a>
