--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -1,18 +1,18 @@
-<section class="py-48 bg-blue">
+<section class="py-48 bg-white">
   <div class="mx-auto max-w-3xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
     <div class="flex flex-col gap-10">
       <div class="flex flex-col items-start gap-8 sm:gap-10">
         <div class="flex max-w-2xl flex-col items-start gap-10 sm:gap-6">
-          <h1 class="text-4xl text-white font-medium tracking-tight sm:text-5xl lg:text-6xl">
+          <h1 class="text-4xl text-primary-900 font-medium tracking-tight sm:text-5xl lg:text-6xl">
             La Mediazione Creditizia, cucita attorno alle tue esigenze
           </h1>
-          <p class="text-white dark:text-primary-200/70 text-lg sm:text-xl">
+          <p class="text-primary-800 dark:text-primary-200/70 text-lg sm:text-xl">
             Una squadra di consulenti pronta a supportarti nella realizzazione dei tuoi sogni
           </p>
         </div>
         <a
           href="/contact"
-          class="bg-lightblue dark:bg-primary-400 hover:bg-primary-700 dark:hover:bg-primary-300 focus-visible:outline-primary-600 dark:focus-visible:outline-primary-400 dark:text-primary-950 inline-flex items-center justify-center rounded-sm border border-transparent px-5 py-3 text-base font-medium text-primary-600 transition focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 mb-36"
+          class="bg-blue text-white hover:bg-primary-700 dark:hover:bg-primary-300 focus-visible:outline-primary-600 dark:focus-visible:outline-primary-400 dark:text-primary-950 inline-flex items-center justify-center rounded-sm border border-transparent px-5 py-3 text-base font-medium text-primary-600 transition focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 mb-36"
         >
           Prenota consulenza
         </a>
@@ -22,7 +22,7 @@
         class=" w-full"
         width="1920"
         height="1080"
-        src="/assets/hero.webp"
+        src="dist/assets/hero-img.webp"
         alt="Hero picture"
      />
   </div>
